# gossip

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/inc/: gossip_client.h  user_interface.h
client/src/: :Explore  gossip_client.c  user_interface.c
inc/: buffer.h  database.h  debug.h  gos_ssh.h  proto_cipa.h  string_packer.h
server/: CMakeLists.txt
server/inc/: gossip_server.h  talker.h  util.h
server/src/: gossip_server.c  gossip_server.cc  talker.c
src/: buffer.c  database.c  gos_ssh.c  gossip.c  proto_cipa.c  string_packer.c
tests/: CMakeLists.txt  buffer_test.c  tests.c
tests/inc/: buffer_test.h
